--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/themes/type_04.css">
     <link rel="stylesheet" href="css/themes/color_01.css">
+    <link rel="stylesheet" href="css/style_new.css">
+
     <title>portfolio_vue</title>
   </head>
   <body>
