--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script src="js/vendor/modernizr.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="js/script2.js"></script>
+
     <!-- <link rel="stylesheet" href="css/about.css"> -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/themes/type_04.css">
