--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="js/script2.js"></script>
+    <!-- <script src="js/script2.js"></script> -->
   </body>
 </html>
