--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-    <!-- <link rel="stylesheet" href="css/about.css"> -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/themes/type_04.css">
-    <link rel="stylesheet" href="css/themes/color_01.css">
-    <link rel="stylesheet" href="css/style_new.css">
 
-    <title>portfolio_vue</title>
+    <title>Arash Abedin Portfolio</title>
   </head>
   <body>
     <noscript>
